--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -26,6 +26,7 @@
             </tbody>
         </table>
     </div>
+    <p><a href="admin-login.html">Back to Admin Login</a></p>
 
     <script src="admin-scripts.js"></script>
 
