--- a/admin-login.html
+++ b/admin-login.html
@@ -20,6 +20,7 @@
             <br>
             <button type="submit">Login</button>
         </form>
+        <p><a href="index.html">User Login</a></p>
     </div>
 
     <script src="admin-scripts.js"></script> 
