--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <input type="text" id="hall_id" placeholder="Enter hall ID" required>
             </div>
             <div class="input-group">
-                <label for="club_id">Club ID</label>
-                <input type="text" id="club_id" placeholder="Enter club ID" required>
+                <label for="club_name">Club Name:</label>
+                <input type="text" id="club_name" placeholder="Enter Club Name" required>
             </div>
             <div class="input-group">
                 <label for="date">Date</label>
