--- a/index.html
+++ b/index.html
@@ -1,69 +1,3 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seminar Hall Booking System</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Seminar Hall Booking System</h1>
-    </header>
-
-    <section id="login-section" class="form-section">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <div class="input-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" placeholder="Enter your username" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter your password" required>
-            </div>
-            <button type="submit" class="primary-btn">Login</button>
-        </form>
-        <p><a href="admin-login.html">Admin Login</a></p>
-
-    </section>
-
-    <section id="booking-section" class="form-section" style="display:none;">
-        <h2>Book a Seminar Hall</h2>
-        <form id="bookingForm">
-            <div class="input-group">
-                <label for="event_name">Event Name</label>
-                <input type="text" id="event_name" placeholder="Enter event name" required>
-            </div>
-            <div class="input-group">
-                <label for="hall_id">Select Hall</label>
-                <input type="text" id="hall_id" placeholder="Enter hall ID" required>
-            </div>
-            <div class="input-group">
-                <label for="club_name">Club Name:</label>
-                <input type="text" id="club_name" placeholder="Enter Club Name" required>
-            </div>
-            <div class="input-group">
-                <label for="date">Date</label>
-                <input type="date" id="date" required>
-            </div>
-            <div class="input-group">
-                <label for="start_time">Start Time</label>
-                <input type="time" id="start_time" required>
-            </div>
-            <div class="input-group">
-                <label for="end_time">End Time</label>
-                <input type="time" id="end_time" required>
-            </div>
-            <button type="submit" class="primary-btn">Book</button>
-        </form>
-    </section>
-
-    <script src="scripts.js"></script>
-</body>
-</html>
-!-->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -71,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seminar Hall Booking System</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet"> 
+
     <style>
         :root {
-            --primary: #2563eb;
-            --primary-light: #3b82f6;
-            --gray-50: #f9fafb;
-            --gray-100: #f3f4f6;
+            --primary: #4CAF50;
+            --primary-light: #45a049;
+            --gray-50: #dbdbdb;
+            --gray-100: #c6c7ca;
             --gray-200: #e5e7eb;
             --gray-300: #d1d5db;
             --gray-500: #6b7280;
@@ -98,7 +34,7 @@
 
         /* Navigation */
         nav {
-            background: white;
+            background: rgb(172, 170, 170);
             box-shadow: 0 1px 3px rgba(0,0,0,0.1);
         }
 
@@ -137,6 +73,25 @@
             margin: 2rem auto;
             padding: 0 1rem;
         }
+        #titttle {
+            background-color: #4CAF50; /* Preferred color */
+
+            color: white; /* Text color */
+            text-align: center; /* Center align text */
+            padding: 20px 20px; /* Spacing around the title */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow effect */
+            border-radius: 8px; /* Rounded corners */
+            margin-bottom: 20px; /* Space below the title section */
+            font-family: 'Poppins', sans-serif; /* Informal font family */
+        }
+
+        #titttle h1 {
+            font-size: 3em; /* Increased font size for the title */
+            margin: 0; /* Remove default margin */
+            text-transform: uppercase; /* Uppercase letters */
+            letter-spacing: 2px; /* Spacing between letters */
+        }
+
 
         /* Login Section */
         #login-section {
@@ -248,6 +203,13 @@
     </style>
 </head>
 <body>
+    <section id ="titttle">
+        <div>
+            <head>
+                <h1>Seminar Booking System</h1>
+            </head>
+        </div>
+    </section>
     <section id="login-section" class="card">
         <h2 class="card-title">Login</h2>
         <form id="loginForm">
@@ -263,6 +225,10 @@
         </form>
         <div class="admin-link">
             <a href="admin-login.html">Admin Login</a>
+        </div>
+        <div>
+            <p style="padding-left: 1.25rem;">Booking related issues contact IT Admin.</p>
+            <p style="padding-left: 2.80rem;">Founders Block, Room No: F500</p>
         </div>
     </section>
 
@@ -298,6 +264,10 @@
             <button type="submit" class="primary-btn">Book Hall</button>
         </form>
     </section>
+    <footer style="padding-left: 20rem;">
+        <p style="align-items: center;">&copy; 2024 Seminar Booking System. All rights reserved.</p>
+    </footer>
+    
 
     <script src="scripts.js"></script>
 </body>
