--- a/bookedhalls.html
+++ b/bookedhalls.html
@@ -21,9 +21,11 @@
             </tr>
         </thead>
         <tbody>
-            <!-- Booked hall details will be populated here -->
+            <!-- Booked hall details will be populated here --> 
         </tbody>
     </table>
+    <a href="index.html">Back</a>
     <script src="scripts2.js"></script>
 </body>
 </html>
+ 
