--- a/booking-summary.html
+++ b/booking-summary.html
@@ -47,12 +47,12 @@
         p {
             margin: 10px 0;
             padding: 10px;
-            border-left: 4px solid #007BFF; /* Left border for emphasis */
+            border-left: 4px solid #4CAF50 /* Left border for emphasis */
             background-color: #e9f3ff; /* Light background for paragraph */
         }
         
         strong {
-            color: #007BFF; /* Highlight text color */
+            color: #4CAF50; /* Highlight text color */
         }
         
         /* Responsive styles */
