--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
         </form>
         <div class="admin-link">
             <a href="admin-login.html">Admin Login</a>
+            <a href="bookedhalls.html"><button class="secondary-btn">Booked halls</button></a>
+
         </div>
         <div>
             <p style="padding-left: 1.25rem;">Booking related issues contact IT Admin.</p>
