--- a/bookedhalls.html
+++ b/bookedhalls.html
@@ -4,7 +4,133 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booked Halls</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* General Styling */
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+    color: #333;
+}
+
+h1 {
+    text-align: center;
+    margin-top: 20px;
+    color: #4CAF50; /* Matches the title section color */
+}
+
+/* Table Container */
+.table-container {
+    width: 80%;
+    margin: 40px auto;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+/* Table Styling */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 0;
+}
+
+thead {
+    background-color: #4CAF50;
+    color: #fff;
+}
+
+th, td {
+    padding: 12px 15px;
+    text-align: left;
+}
+
+th {
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #f1f9f1;
+}
+
+/* Buttons */
+button {
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button.approve-btn {
+    background-color: #4CAF50;
+    color: white;
+}
+
+button.deny-btn {
+    background-color: #f44336;
+    color: white;
+}
+
+button:hover {
+    opacity: 0.9;
+}
+
+/* Table Responsiveness */
+@media (max-width: 768px) {
+    .table-container {
+        width: 95%;
+    }
+
+    th, td {
+        font-size: 0.9rem;
+        padding: 10px;
+    }
+}
+
+/* Footer */
+footer {
+    text-align: center;
+    margin: 20px 0;
+    color: #666;
+}
+
+/* Back Button Styling */
+.back-btn {
+    display: inline-block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    text-align: center;
+}
+
+.back-btn:hover {
+    background-color: #45a049;
+}
+
+.back-btn:active {
+    background-color: #3e8e41;
+}
+
+.back-btn-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+    </style>
 </head>
 <body>
     <header>
@@ -14,6 +140,7 @@
         <thead>
             <tr>
                 <th>Event Name</th>
+                <th>Hall Name</th>
                 <th>Date</th>
                 <th>Start Time</th>
                 <th>End Time</th>
@@ -24,8 +151,9 @@
             <!-- Booked hall details will be populated here --> 
         </tbody>
     </table>
-    <a href="index.html">Back</a>
+    <div class="back-btn-container">
+        <a href="index.html" class="back-btn">Back to Dashboard</a>
+    </div>
     <script src="scripts2.js"></script>
 </body>
 </html>
- 
