--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - Seminar Hall Booking System</title>
-    <link rel="stylesheet" href="admin-styles.css"> <!-- Link to your CSS -->
+    <link rel="stylesheet" href="admin-styles.css">
 </head>
 <body>
     <div id="booking-list">
@@ -13,14 +13,15 @@
             <thead>
                 <tr>
                     <th>Event Name</th>
+                    <th>Hall Name</th>
                     <th>Date</th>
                     <th>Start Time</th>
                     <th>End Time</th>
                     <th>Status</th>
-                    <th>Actions</th> <!-- New header for action buttons -->
+                    <th>Actions</th>
                 </tr>
             </thead>
-            <tbody id="bookings-tbody"> <!-- Add an ID here for JS selection -->
+            <tbody id="bookings-tbody">
                 <!-- Bookings will be populated here -->
             </tbody>
         </table>
