--- a/admin-login.html
+++ b/admin-login.html
@@ -6,94 +6,23 @@
     <title>Admin Login - Seminar Hall Booking System</title>
     <link rel="stylesheet" href="admin-styles.css">
 </head>
-<style><style>
-    body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background: linear-gradient(135deg, #6e8efb, #a777e3);
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .login-container {
-        background-color: white;
-        padding: 40px;
-        border-radius: 10px;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        text-align: center;
-        width: 100%;
-        max-width: 400px;
-    }
-
-    h1 {
-        font-size: 24px;
-        color: #4CAF50;
-        margin-bottom: 20px;
-    }
-
-    label {
-        font-size: 14px;
-        color: #333;
-        display: block;
-        margin-bottom: 8px;
-        text-align: left;
-    }
-
-    input[type="text"],
-    input[type="password"] {
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 20px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        font-size: 14px;
-    }
-
-    button {
-        width: 100%;
-        padding: 10px;
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        font-size: 16px;
-    }
-
-    button:hover {
-        background-color: #45a049;
-    }
-
-    p {
-        margin-top: 20px;
-        font-size: 14px;
-    }
-
-    p a {
-        color: #007BFF;
-        text-decoration: none;
-    }
-
-    p a:hover {
-        text-decoration: underline;
-    }
-</style>
-</style>
-<body>
-    <div><h1>Admin Login</h1></div>
-    <div id="admin-login-section">
-        <form id="adminLoginForm">
-            <label for="admin_username">Username:</label>
-            <input type="text" id="admin_username" required>
-            <br>
-            <label for="admin_password">Password:</label>
-            <input type="password" id="admin_password" required>
-            <br>
-            <button type="submit">Login</button>
-        </form>
-        <p><a href="index.html">User Login</a></p>
+<body class="login-body">
+    <div class="login-container">
+        <div class="login-box">
+            <h1>Admin Login</h1>
+            <form id="adminLoginForm">
+                <div class="form-group">
+                    <label for="admin_username">Username</label>
+                    <input type="text" id="admin_username" required>
+                </div>
+                <div class="form-group">
+                    <label for="admin_password">Password</label>
+                    <input type="password" id="admin_password" required>
+                </div>
+                <button type="submit" class="login-button">Login</button>
+            </form>
+            <p class="back-link"><a href="index.html">Back to User Login</a></p>
+        </div>
     </div>
 
     <script src="admin-scripts.js"></script>
