--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 </div>
             </div>
             <button type="submit" class="primary-btn">Book Hall</button>
-            <button class="secondary-btn">Booked halls</button>
+            <button id="bookedHallsBtn" class="secondary-btn">Booked halls</button>
         </form>
     </section>
     
